# solciety-staking

./: readme.md
backend/: .env  generated.json  lock.js  package-lock.json  package.json  server.js  start.sh  stop.sh  trigger_start.sh  trigger_stop.sh
backend/conf/: config.xml  config_linux.xml  template_uri.json
backend/config/: default.bak.json  default.json
backend/controller/: metadata.js
backend/routes/: router.js
backend/site/: asset-manifest.json  index.html
backend/solmate/: airdrop_host.bat  airdrop_host0.bat  airdrop_staker.bat  buyer3_wallet.json  config.js  generated.json  get_config_info.js  host_wallet.json  initialize.js  layout.js  log.yaml  reward.js  reward_local.js  stake.js  test_bytes_only.js  test_pda.js  test_sltos_gap_and_num_nfts_balance.js  test_utc.js  v2_check_expiration.js  v2_claim.js  v2_config.js  v2_expand.js  v2_initialize.js  v2_layout.js  v2_reward.js  v2_reward_trigger.js  v2_stake.js  v2_unstake.js
backend/tools/: blockchain_init.js  (+18 more)
doc/: README.MD  Solmate NFT proj biz requirements v1.docx  Solmate NFT proj biz requirements v2.docx  Solmate NFT proj biz requirements v3.docx  Solmate Project Solution v1.docx  Solmate Project Solution v2.docx  Solmate Project Solution v3.docx  Solmate Project User Manual v1.docx  VM for CIETY project.yaml  design v3.sdr  design.sdr  solmat contract test report.docx  test_unstake.docx
frontend/: .eslintcache
program_token/program_token/: .gitignore  Cargo.toml
program_token/program_token/src/: entrypoint.rs  lib.rs  v2_error.rs  v2_instruction.rs  v2_processor.rs  v2_state.rs
(+89 files in other folders)
