[package]
name = "solmate_program_token"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.9"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "1.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"]}
serde_json = {version = "1.0.59"}
serde = {version = "1.0.117"}
serde_derive = {version = "1.0.117"}
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
